# qumir

./: CMakeLists.txt  README.md  TODO.md
qumir/: CMakeLists.txt  future.cpp  future.h  module_manager.h
qumir/codegen/llvm/: CMakeLists.txt  llvm_asm_printer.cpp  llvm_codegen.cpp  llvm_codegen.h  llvm_codegen_impl.h  llvm_runner.cpp  llvm_runner.h
qumir/frontend/: compose.cpp  compose.h  source_module.h  source_module_loader.cpp  source_module_loader.h
qumir/ir/: builder.cpp  builder.h  eval.cpp  eval.h  ffi.cpp  ffi.h  type.cpp  type.h  vmcompiler.cpp  vmcompiler.h  vminstr.cpp  vminstr.h
qumir/ir/lowering/: lower_ast.cpp  lower_ast.h
qumir/ir/passes/transforms/: const_fold.cpp
qumir/modules/: module.h
qumir/modules/colors/: colors.cpp
qumir/modules/complex/: complex.cpp
qumir/modules/drawer/: drawer.cpp  drawer.h
qumir/modules/keyboard/: keyboard.cpp
qumir/modules/painter/: painter.cpp
qumir/modules/robot/: robot.cpp
qumir/modules/system/: system.cpp
qumir/modules/turtle/: turtle.cpp
qumir/parser/: ast.cpp  ast.h  lexer.cpp  lexer.h  lexer_base.cpp  lexer_base.h  parser.cpp  parser.h  type.cpp  type.h
qumir/parser/core/: lexer.cpp  lexer.h  parser.cpp  parser.h  printer.cpp  printer.h
qumir/runner/: runner_ir.cpp  runner_ir.h  runner_llvm.cpp  runner_llvm.h
qumir/runtime/: colors.cpp  colors.h  complex.cpp  complex.h  drawer.cpp  drawer.h  io.cpp  io.h  math.cpp  math.h  painter.cpp  painter.h
qumir/semantics/: return_analysis.cpp  return_analysis.h
qumir/semantics/definite_assignment/: definite_assignment.cpp  definite_assignment.h
qumir/semantics/kumir/: pipeline.cpp  pipeline.h
qumir/semantics/lifetime/: pass.cpp  validator.cpp
qumir/semantics/name_resolution/: name_resolver.cpp  name_resolver.h
qumir/semantics/transform/: transform.cpp  transform.h
qumir/semantics/type_annotation/: coercions.cpp  coercions.h  type_annotation.cpp  type_annotation.h
service/: build-docs.js  (+1 more)
test/: CMakeLists.txt  test_bit_ops.cpp  test_compose.cpp  test_core_lexer.cpp  test_exec.js  test_ffi.cpp  test_field_access.cpp  test_if_expr.cpp  test_lifetime_lowering.cpp  test_lifetime_pass.cpp  test_module_exec.cpp  test_name_resolver.cpp  test_printer.cpp  test_reg.cpp  test_semantic_pipeline.cpp  test_source_module_loader.cpp
test/regtest/cases/complex/: print.kum
test/regtest/cases/corelang/: array_ref.oz  casts.oz  extern_abs.oz  extern_cabs.oz  extern_fabs.oz  gmod_lib.oz  if_all_branches_return_nested.oz  if_bool_literal.oz  if_else_if_all_branches_return.oz  int_cast_ext.oz  ints.oz  lifetime_array.oz  lifetime_array_bounds.oz  lifetime_globals.oz  lifetime_last_assert.oz  lifetime_string.oz  nan_eq.oz  raw_i8_pointer.oz  scalar_global.oz  slice.oz  type_decl.oz  type_import.oz  type_import_conflict.oz  unsigned_bit_ops.oz  use_module_global.oz  var_infer.oz
test/regtest/cases/decl/: array.kum
test/regtest/cases/drawer/: async.kum
test/regtest/cases/for/: break_nested_string.kum  continue_string.kum  nested_break_string.kum
test/regtest/cases/fun/: early_return_array.kum  early_return_string.kum
test/regtest/goldens/array/: 1d.ast  2d.ast  3d.ast  bool.ast
test/regtest/goldens/assign/: call_expr.ast  logical.ast  logical.ir
test/regtest/goldens/colors/: array.ast  array_rgb.ast  cmyk.ast  cmyk.ir  constants.ast  constants.ir  decompose.ast  decompose.ir  hsl.ast  hsl.ir  hsv.ast  hsv.ir  print.ast  print.ir  rgb.ast  rgb.ir
test/regtest/goldens/complex/: array.ast  array.ir  basic.ast  casts.ast  comparisons.ast  functions.ast  functions.ir  literal_suffix.ast  logical.ast  operators.ast  print.ast  print.ir  print.result.stdout  ref_args.ast  ref_args.ir
test/regtest/goldens/corelang/: array_ref.ir  array_ref.result.stdout  casts.ir  casts.result.stdout  extern_abs.ir  extern_cabs.ir  extern_fabs.ir  if_all_branches_return_nested.ir  if_bool_literal.ir  if_else_if_all_branches_return.ir  int_cast_ext.ir  int_cast_ext.result.stdout  ints.ir  ints.result.stdout  lifetime_array.ir  lifetime_array.result.stdout  lifetime_array_bounds.ir  lifetime_array_bounds.result.stdout  lifetime_globals.ir  lifetime_globals.result.stdout  lifetime_last_assert.ir  lifetime_string.ir  lifetime_string.result.stdout  nan_eq.ir  nan_eq.result.stdout  raw_i8_pointer.ir  raw_i8_pointer.result.stdout  scalar_global.ir  slice.ir  type_decl.ir  type_import.ir  type_import_conflict.ir  unsigned_bit_ops.ir  use_module.ir  use_module_global.ir  var_infer.ir  var_infer.result.stdout
test/regtest/goldens/decl/: array.ast  array.ir
test/regtest/goldens/drawer/: async.ast  async.ir
test/regtest/goldens/errors/: expect_after.ast  expect_after.result  expect_before.ast  expect_before.result  unassigned_expr.ir  unresolved_symbol.ast  unresolved_symbol2.ast  unresolved_symbol2.ir  unresolved_symbol3.ast
test/regtest/goldens/for/: break.ast  break.ir  break_nested_string.ast  break_nested_string.ir  break_nested_string.result  break_string.ast  break_string.ir  continue_string.ast  continue_string.ir  continue_string.result  factorial.ast  factorial.ir  for_inf.ast  for_inf.ir  for_negstep.ast  for_negstep.ir  for_nostep.ir  for_step1.ast  for_step_nodiv_neg.ast  for_step_nodiv_neg.ir  for_step_nodiv_pos.ast  for_step_nodiv_pos.ir  for_stepn.ast  for_stepn.ir  for_times.ast  for_times.ir  nested_break_string.ast  nested_break_string.ir  nested_break_string.result
test/regtest/goldens/fun/: early_return_array.ast  early_return_array.ir  early_return_string.ast  early_return_string.ir  factorial_rec.ast  factorial_rec.ir  fun_exit.ast  fun_noargs_ret.ast  fun_ret.ast  fun_void_call.ast
test/regtest/goldens/if/: if.ast  if.ir  if_chain.ast  if_else.ast  if_else.ir  if_else_cond.ast  if_not.ast
test/regtest/goldens/io/: float_format.ast
test/regtest/goldens/math/: cg.ast  cg.ir  gauss.ast  gauss.ir  gmres.ast  gmres.ir  heat3d.ast  heat3d.ir  heat3d_implicit.ast  heat3d_implicit.ir  lanczos2d.ast  lanczos2d.ir  matmat.ast  matmat.ir  matvec.ast  matvec.ir  poisson3d.ast  poisson3d.ir  poisson3d_gs.ast  poisson3d_gs.ir  strings.ast  strings.ir
(+138 files in other folders)
