add_library(qumir
    modules/system/system.h
    modules/system/system.cpp
    modules/robot/robot.h
    modules/robot/robot.cpp
    modules/colors/colors.h
    modules/colors/colors.cpp
    modules/keyboard/keyboard.h
    modules/keyboard/keyboard.cpp
    modules/turtle/turtle.h
    modules/turtle/turtle.cpp
    modules/drawer/drawer.h
    modules/drawer/drawer.cpp
    modules/painter/painter.h
    modules/painter/painter.cpp
    modules/complex/complex.h
    modules/complex/complex.cpp
    modules/module.h
    modules/module.cpp
    parser/ast.h
    parser/ast.cpp
    parser/lexer.h
    parser/lexer.cpp
    parser/lexer_base.h
    parser/lexer_base.cpp
    parser/core/lexer.h
    parser/core/lexer.cpp
    parser/core/parser.h
    parser/core/parser.cpp
    parser/core/printer.h
    parser/core/printer.cpp
    parser/operator.h
    parser/operator.cpp
    parser/parser.h
    parser/parser.cpp
    parser/type.h
    parser/type.cpp
    frontend/source_module.h
    frontend/source_module_loader.h
    frontend/source_module_loader.cpp
    frontend/compose.h
    frontend/compose.cpp
    runner/runner_ir.h
    runner/runner_ir.cpp
    runner/runner_llvm.h
    runner/runner_llvm.cpp
    ir/lowering/lower_ast.h
    ir/lowering/lower_ast.cpp
    ir/passes/analysis/cfg.h
    ir/passes/analysis/cfg.cpp
    ir/passes/transforms/const_fold.h
    ir/passes/transforms/const_fold.cpp
    ir/passes/transforms/de_ssa.h
    ir/passes/transforms/de_ssa.cpp
    ir/passes/transforms/locals2ssa.h
    ir/passes/transforms/locals2ssa.cpp
    ir/passes/transforms/pipeline.h
    ir/passes/transforms/pipeline.cpp
    ir/passes/transforms/renumber_regs.h
    ir/passes/transforms/renumber_regs.cpp
    ir/builder.h
    ir/builder.cpp
    ir/eval.h
    ir/eval.cpp
    ir/ffi.h
    ir/ffi.cpp
    ir/type.h
    ir/type.cpp
    ir/vmcompiler.h
    ir/vmcompiler.cpp
    ir/vminstr.h
    ir/vminstr.cpp
    semantics/definite_assignment/definite_assignment.h
    semantics/definite_assignment/definite_assignment.cpp
    semantics/name_resolution/name_resolver.h
    semantics/name_resolution/name_resolver.cpp
    semantics/return_analysis.h
    semantics/return_analysis.cpp
    semantics/return_normalization/pass.h
    semantics/return_normalization/pass.cpp
    semantics/lifetime/pass.h
    semantics/lifetime/pass.cpp
    semantics/lifetime/synthetic_name_generator.h
    semantics/lifetime/synthetic_name_generator.cpp
    semantics/lifetime/type_traits.h
    semantics/lifetime/type_traits.cpp
    semantics/lifetime/validator.h
    semantics/lifetime/validator.cpp
    semantics/kumir/pipeline.h
    semantics/kumir/pipeline.cpp
    semantics/transform/transform.h
    semantics/transform/transform.cpp
    semantics/type_annotation/coercions.h
    semantics/type_annotation/coercions.cpp
    semantics/type_annotation/type_annotation.h
    semantics/type_annotation/type_annotation.cpp
    error.h
    error.cpp
    location.h
    optional.h
    future.h
)
target_include_directories(qumir PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/..)
target_compile_features(qumir PUBLIC cxx_std_23)
target_link_libraries(qumir PUBLIC ${CMAKE_DL_LIBS})
add_subdirectory(runtime)
add_subdirectory(codegen/llvm)
